--- a/bwmcnew/Web.config
+++ b/bwmcnew/Web.config
@@ -3,7 +3,49 @@
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
+
+
 <configuration>
+	<configSections>
+		<section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+	</configSections>
+	<paypal>
+		<settings>
+			<add name="mode" value="live" />
+			<add name="connectionTimeout" value="360000" />
+			<add name="requestRetries" value="1" />
+			<add name="clientId" value="AZWqm6v-U_GF7rPC8hMw6VBCfuHv3DfpMoWw5JenwYDLHKMngwkdG_IAl0eROBAHXc976B_dgtbJYdC_" />
+			<add name="clientSecret" value="EJUsvSlr1tjyt5TPamhKwmGuYKLMVWziMLS_mArE8E42aQAvF1f-9d7Gflheq1woinLORtcF_CaVJKHo" />
+		</settings>
+	</paypal>
+
+	<appSettings>
+		<add key="webpages:Version" value="3.0.0.0" />
+		<add key="webpages:Enabled" value="false" />
+		<add key="PreserveLoginUrl" value="true" />
+		<add key="ClientValidationEnabled" value="true" />
+		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		<add key="brandName" value="Trademark Formation" />
+		<add key="brandDomain" value="domain.com" />
+		<add key="brandEmail" value="info@trademarkformation.com" />
+		<add key="brandTFN" value="1 (855) 504 1743" />
+		<add key="brandTFN1" value="" />
+		<add key="brandAddress" value="1045 Sansome St" />
+		<add key="EmailTo" value="info@domain.com" />
+		<add key="EmailFrom" value="noreply@domain.com" />
+		<add key="EmailHost" value="mail.domain.com" />
+		<add key="EmailPort" value="25" />
+		<add key="EmailUser" value="info@onlineclassassistancepros.com" />
+		<add key="EmailPassword" value="Mikasa2013@" />
+		<add key="StripeSuccessUrl" value="https://localhost:44356/forms/payment-thanks" />
+		<add key="StripeCancelUrl" value="https://localhost:44356/forms/payment-failure" />
+		<add key="EmailEnabled" value="true" />
+		<add key="BrandId" value="10" />
+	</appSettings>
+	<connectionStrings>
+		<add name="SqlConnectionString" connectionString="Data Source=217.76.53.78;Initial Catalog=ipmenders_clients;uid=Khabrain2023;pwd=7D5k%h4E6bof;Max Pool Size=50000;Pooling=True;" providerName="System.Data.SqlClient" />
+		<!--<add name="SqlConnectionString" connectionString="Data Source=DESKTOP-AA11SB2;Initial Catalog=ipmenders_clients;Integrated Security=True; Max Pool Size=50000;Pooling=True;" providerName="system.data.sqlclient" />-->
+	</connectionStrings>	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
