Website home page completed

--- a/bwmcnew/Web.config
+++ b/bwmcnew/Web.config
@@ -25,22 +25,22 @@
 		<add key="PreserveLoginUrl" value="true" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="brandName" value="Trademark Formation" />
-		<add key="brandDomain" value="domain.com" />
-		<add key="brandEmail" value="info@trademarkformation.com" />
-		<add key="brandTFN" value="1 (855) 504 1743" />
+		<add key="brandName" value="Bridge Water Management Consultancies" />
+		<add key="brandDomain" value="bwmc.com" />
+		<add key="brandEmail" value="info@bwmc.com" />
+		<add key="brandTFN" value="1 (123) 456 7890" />
 		<add key="brandTFN1" value="" />
 		<add key="brandAddress" value="1045 Sansome St" />
 		<add key="EmailTo" value="info@domain.com" />
 		<add key="EmailFrom" value="noreply@domain.com" />
-		<add key="EmailHost" value="mail.domain.com" />
+		<add key="EmailHost" value="mail.bwmc.com" />
 		<add key="EmailPort" value="25" />
-		<add key="EmailUser" value="info@onlineclassassistancepros.com" />
+		<add key="EmailUser" value="info@bwmc.com" />
 		<add key="EmailPassword" value="Mikasa2013@" />
 		<add key="StripeSuccessUrl" value="https://localhost:44356/forms/payment-thanks" />
 		<add key="StripeCancelUrl" value="https://localhost:44356/forms/payment-failure" />
 		<add key="EmailEnabled" value="true" />
-		<add key="BrandId" value="10" />
+		<add key="BrandId" value="" />
 	</appSettings>
 	<connectionStrings>
 		<add name="SqlConnectionString" connectionString="Data Source=217.76.53.78;Initial Catalog=ipmenders_clients;uid=Khabrain2023;pwd=7D5k%h4E6bof;Max Pool Size=50000;Pooling=True;" providerName="System.Data.SqlClient" />
