--- a/bwmcnew/Web.config
+++ b/bwmcnew/Web.config
@@ -26,14 +26,14 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="brandName" value="Bridge Water Management Consultancies" />
-		<add key="brandDomain" value="bwmc.com" />
-		<add key="brandEmail" value="info@bwmc.com" />
-		<add key="brandTFN" value="1 (123) 456 7890" />
+		<add key="brandDomain" value="bwmc.ae" />
+		<add key="brandEmail" value="info@bwmc.ae" />
+		<add key="brandTFN" value="+971 54 544 7662" />
 		<add key="brandTFN1" value="" />
 		<add key="brandAddress" value="1045 Sansome St" />
-		<add key="EmailTo" value="info@domain.com" />
-		<add key="EmailFrom" value="noreply@domain.com" />
-		<add key="EmailHost" value="mail.bwmc.com" />
+		<add key="EmailTo" value="info@domain.ae" />
+		<add key="EmailFrom" value="noreply@bwmc.ae" />
+		<add key="EmailHost" value="mail.bwmc.ae" />
 		<add key="EmailPort" value="25" />
 		<add key="EmailUser" value="info@bwmc.com" />
 		<add key="EmailPassword" value="Mikasa2013@" />
