--- a/bwmcnew/bwmcnew.csproj
+++ b/bwmcnew/bwmcnew.csproj
@@ -143,6 +143,10 @@
     <Content Include="assets\images\serv-img-2.jpg" />
     <Content Include="assets\images\serv-img-3.jpg" />
     <Content Include="assets\images\tm-image-1.jpg" />
+    <Content Include="assets\images\tm-image-1.png" />
+    <Content Include="assets\images\tm-image-2.png" />
+    <Content Include="assets\images\tm-image-3.png" />
+    <Content Include="assets\images\tm-image-4.png" />
     <Content Include="assets\images\trusted-icons.png" />
     <Content Include="assets\img\flags%402x.png" />
     <Content Include="assets\img\flags.png" />
