--- a/bwmcnew/Web.config
+++ b/bwmcnew/Web.config
@@ -25,27 +25,27 @@
 		<add key="PreserveLoginUrl" value="true" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="brandName" value="Bridge Water Management Consultancies" />
+		<add key="brandName" value="bridgewater" />
 		<add key="brandDomain" value="bwmc.ae" />
-		<add key="brandEmail" value="info@bwmc.ae" />
-		<add key="brandTFN" value="+971 54 544 7662" />
+		<add key="brandEmail" value="info@bridgewater.com" />
+		<add key="brandTFN" value="1-833-207-5508" />
 		<add key="brandTFN1" value="" />
 		<add key="brandAddress" value="1045 Sansome St" />
-		<add key="EmailTo" value="info@domain.ae" />
-		<add key="EmailFrom" value="noreply@bwmc.ae" />
-		<add key="EmailHost" value="mail.bwmc.ae" />
+		<add key="EmailTo" value="info@bridgewater.com" />
+		<add key="EmailFrom" value="noreply@bridgewater.com" />
+		<add key="EmailHost" value="mail.academic.com" />
 		<add key="EmailPort" value="25" />
-		<add key="EmailUser" value="info@bwmc.com" />
+		<add key="EmailUser" value="info@bridgewater.com" />
 		<add key="EmailPassword" value="Mikasa2013@" />
-		<add key="StripeSuccessUrl" value="https://localhost:44356/forms/payment-thanks" />
-		<add key="StripeCancelUrl" value="https://localhost:44356/forms/payment-failure" />
-		<add key="EmailEnabled" value="true" />
-		<add key="BrandId" value="" />
+		<add key="StripeSuccessUrl" value="https://localhost:44331/forms/payment-thanks" />
+		<add key="StripeCancelUrl" value="https://localhost:44331/forms/payment-failure" />
+		<add key="EmailEnabled" value="false" />
+		<add key="BrandId" value="15" />
 	</appSettings>
 	<connectionStrings>
 		<add name="SqlConnectionString" connectionString="Data Source=217.76.53.78;Initial Catalog=ipmenders_clients;uid=Khabrain2023;pwd=7D5k%h4E6bof;Max Pool Size=50000;Pooling=True;" providerName="System.Data.SqlClient" />
 		<!--<add name="SqlConnectionString" connectionString="Data Source=DESKTOP-AA11SB2;Initial Catalog=ipmenders_clients;Integrated Security=True; Max Pool Size=50000;Pooling=True;" providerName="system.data.sqlclient" />-->
-	</connectionStrings>	
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
